@@ -148,6 +148,9 @@ reschedule_timeout = 10.0
 # Interval of snapin updates in seconds
 sidebar_update_interval = 30.0
 
+# It is possible (but ugly) to enable a scrollbar in the sidebar
+sidebar_show_scrollbar = False
+
 # Number of columsn in "Filter" form
 filter_columns = 2
 
